# QuickBasicEmulator_X86

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  NOTICE.md  README.md  version.json
.github/workflows/: ci.yml
server/: Dockerfile  README.md  entrypoint.sh  package.json  qbe-runner.service  server.js
src/: main.cpp
